# sound_recorder_calibration

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
data/raw/: LxT_0003857-20260202 142124-LxT_Data.004.xlsx  LxT_sound_equalization_check.xlsx  LxT_sound_equalization_curve.xlsx
data/temp/: LxT_Data_001.csv
script/: Calibration_script.qmd  Calibration_script_AM_casing_test.docx  Calibration_script_AM_casing_test.html  Calibration_script_AM_casing_test.qmd  Sound_equalization.py  read_slm-LXT.R  read_slm-LXT_italian.R  read_sound_file.py  signal_snippet_extraction.py  signal_snippet_extraction_WildSOUND.py  sound_equalization_curve.py
script/Archive-tests/: extract_sensor_frequency_response_curve.py
