
[project]
authors = [
  {name = "JuliaWielSekiou", email = "julia.wiel@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ"
]
description = ""
license = "GPL-3.0+"
name = "sound_recorder_calibration"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"


[project.scripts]
sound_recorder_calibration = "main:start"

[dependency-groups]
dev = [
  "deptry",
  "ipykernel",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
